syntax = "proto3";

package fortiledger360.v1;

option csharp_namespace = "FortiLedger360.Protos.V1";
option go_package        = "github.com/fortiledger360/idl/go/v1;fortiledger360pb";
option java_multiple_files = true;
option java_package        = "com.fortiledger360.protos.v1";

// -----------------------------------------------------------------------------
// FortiLedger360 Enterprise Security Suite – Command Contracts
//
// This .proto file defines the canonical command contracts that micro-front-ends
// publish to the event-bus and that downstream mesh services consume.  Messages
// are deliberately fine-grained to ensure forward-compatibility and to allow the
// platform to evolve individual commands without breaking older clients.
//
// A single “Command” envelope carries a strongly-typed payload (via `oneof`) as
// well as metadata used for routing, tracing, and SLA enforcement.
//
// NOTE:
//   • All timestamps are in UTC.
//   • `tenant_id` MUST be set for multi-tenant isolation.
//   • `priority` is advisory and may be downgraded by policy.
//   • If a new command is added, bump the `CommandType` enum and extend the
//     `oneof payload` accordingly.
//
// -----------------------------------------------------------------------------

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "validate/validate.proto";               // buf.build/envoyproxy/protoc-gen-validate

//-----------------------------------------------------------------------------
// Enumerations
//-----------------------------------------------------------------------------

// Type discriminator for quick routing / indexing.
// The numeric values are frozen once released in production.
enum CommandType {
  COMMAND_TYPE_UNSPECIFIED      = 0;
  COMMAND_TYPE_INITIATE_SCAN    = 1;
  COMMAND_TYPE_ROLL_BACKUP      = 2;
  COMMAND_TYPE_UPSIZE_CAPACITY  = 3;
  COMMAND_TYPE_ONBOARD_TENANT   = 4;
  COMMAND_TYPE_REQUEST_AUDIT    = 5;
}

// Suggestion for downstream execution ordering.
// Consumers MAY choose to ignore this hint.
enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW         = 1;
  PRIORITY_NORMAL      = 2;
  PRIORITY_HIGH        = 3;
  PRIORITY_CRITICAL    = 4;
}

//-----------------------------------------------------------------------------
// Common Metadata
//-----------------------------------------------------------------------------

// Header attached to every command for traceability and governance.
message CommandHeader {
  // Universally unique, immutable event identifier (RFC-4122).
  string id                 = 1 [(validate.rules).string.uuid = true];

  // What kind of command payload this envelope holds.
  CommandType type          = 2;

  // Multi-tenant context; ASCII only to simplify IAM rules.
  string tenant_id          = 3 [(validate.rules).string = {min_len: 3, max_len: 64}];

  // Optional correlation chain (e.g., HTTP request-ID) to tie together logs.
  string correlation_id     = 4 [(validate.rules).string = {min_len: 16, max_len: 64}];

  // Creation timestamp emitted by the producer (monotonic clocks not assumed).
  google.protobuf.Timestamp created_at = 5;

  // Suggested execution priority.
  Priority priority         = 6;

  // Retries attempted by infrastructure (incremented by consumers).
  uint32 retry_count        = 7;
}

//-----------------------------------------------------------------------------
// Domain-specific Command Payloads
//-----------------------------------------------------------------------------

// 1) Security Scan -----------------------------------------------------------------
message InitiateSecurityScan {
  // Name of the target cluster (Kubernetes, VM-pool, etc.).
  string cluster_name       = 1 [(validate.rules).string = {min_len: 3, max_len: 128}];

  // Depth of scan; higher levels are more exhaustive and resource-intensive.
  uint32 scan_level         = 2 [(validate.rules).uint32 = {gte: 1, lte: 10}];

  // Use canary tokens to detect runtime tampering.
  bool enable_canary_tokens = 3;

  // When true, results will be automatically exported to the customer portal.
  bool publish_findings     = 4;
}

// 2) Backup ------------------------------------------------------------------------
message RollClusterBackup {
  string cluster_name       = 1 [(validate.rules).string = {min_len: 3, max_len: 128}];

  // Full vs incremental backup selection.
  bool full_snapshot        = 2;

  // ISO-8601 cron expression dictating backup scheduling.
  string schedule           = 3 [(validate.rules).string = {min_len: 9, max_len: 64}];
}

// 3) Capacity Management -----------------------------------------------------------
message UpsizeCapacity {
  string cluster_name       = 1 [(validate.rules).string = {min_len: 3, max_len: 128}];

  // Number of additional compute units requested.
  uint32 additional_vcpu    = 2 [(validate.rules).uint32 = {gt: 0}];

  // Additional memory in MiB.
  uint32 additional_ram_mib = 3 [(validate.rules).uint32 = {gt: 0}];

  // Optional comment for audit trail.
  string justification      = 4 [(validate.rules).string = {max_len: 256}];
}

// 4) Tenant Lifecycle --------------------------------------------------------------
message OnboardTenant {
  // Globally unique tenant slug.
  string tenant_slug        = 1 [(validate.rules).string = {pattern: "^[a-z0-9\\-]{3,64}$"}];

  string admin_email        = 2 [(validate.rules).string = {email: true}];

  // Human-readable business name.
  string display_name       = 3 [(validate.rules).string = {min_len: 3, max_len: 128}];

  // ISO-3166-1 alpha-2 country code for residency requirements.
  string country            = 4 [(validate.rules).string = {pattern: "^[A-Z]{2}$"}];
}

// 5) Compliance ‑ Audit ------------------------------------------------------------
message RequestAuditReport {
  // Time-range [from, to] inclusive.
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to   = 2;

  // Optional list of specific compliance frameworks (e.g., "PCI-DSS", "SOC-2").
  repeated string frameworks     = 3;
}

//-----------------------------------------------------------------------------
// Envelope
//-----------------------------------------------------------------------------

message Command {
  // Metadata for governance/routing.
  CommandHeader header = 1;

  // Strongly-typed payload.
  oneof payload {
    InitiateSecurityScan initiate_security_scan = 100;
    RollClusterBackup    roll_cluster_backup    = 101;
    UpsizeCapacity       upsize_capacity        = 102;
    OnboardTenant        onboard_tenant         = 103;
    RequestAuditReport   request_audit_report   = 104;

    // Unknown/forward-compat payloads (fallback).
    google.protobuf.Any  opaque                = 199;
  }
}

//-----------------------------------------------------------------------------
// Acknowledgements / Error Feedback
//-----------------------------------------------------------------------------

// Minimal acknowledgement; services typically publish their own events for
// long-running operations instead of waiting on a blocking RPC.
message CommandAck {
  // Mirrors the original command ID.
  string command_id       = 1 [(validate.rules).string.uuid = true];

  // Timestamp when command was accepted onto the bus.
  google.protobuf.Timestamp accepted_at = 2;
}

// Negative acknowledgement that signals validation or policy rejection.
message CommandNack {
  string command_id  = 1 [(validate.rules).string.uuid = true];
  google.rpc.Status  error       = 2;
}

//-----------------------------------------------------------------------------
// gRPC Service ‑ optional thin façade over the event bus
//-----------------------------------------------------------------------------

service CommandService {
  // Immediately publishes the command to the event bus and returns an ACK/NACK.
  rpc SubmitCommand(Command) returns (CommandAck);

  // Health check (see: gRFC L5).
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}